--- a/src/Hotel.API/appsettings.Production.json
+++ b/src/Hotel.API/appsettings.Production.json
@@ -2,7 +2,7 @@
     "mailKit": {
         "Name": "Roomee",
         "Email": "vinhphucit02@gmail.com",
-        "Password": "qfvjrvwjozrxyrwp",
+        "Password": "",
         "Host": "smtp.gmail.com",
         "Port": 587
     },
@@ -73,8 +73,8 @@
         "Server": "sql",
         "Database": "rest_hotel",
         "TrustServerCerti ficate": false,
-        "Encrypt": false,
+        "Encrypt": true,
         "Username": "sa",
-        "Password": "pa55w0rd!"
+        "Password": ""
     }
 }
